<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Enter numbers only"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/alphabetInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Enter alphabets only"
        android:layout_below="@id/numberInput"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@id/alphabetInput"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/validationMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

</RelativeLayout>
